--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,8 @@ name: Java CI with Ant
 
 on:
   push:
+    branches:
+      - '**'
     tags:
       - 'v*'
 
@@ -31,6 +33,6 @@ jobs:
 
     - name: Create Release
       uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
+      if: startsWith(github.ref, 'refs/tags/v')
       with:
         files: KLKLauncher.zip
